# screenspace

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
cmake/: FindMaya.cmake
src/: CMakeLists.txt  PickerCommand.cc  PickerCommand.hh  PickerDrawOverride.cc  PickerDrawOverride.hh  PickerShape.cc  PickerShape.hh  PickerUI.cc  PickerUI.hh  Plugin.cc
src/screenspace/: Log.cc  Log.hh  PickerDrawOverride.cc  PickerDrawOverride.hh  PickerShape.cc  PickerShape.hh  Plugin.cc  Types.hh
src/screenspace/commands/: AddCommand.cc  AddCommand.hh  RemoveCommand.cc  RemoveCommand.hh
src/screenspace/scripts/: AEpickerTemplate.mel
src/scripts/: AEpickerTemplate.mel
src/ss/: Example.cc  Log.cc  Log.hh  PickableDrawOverride.cc  PickableDrawOverride.hh  PickableShape.cc  PickableShape.hh  Platform.hh  Plugin.cc  Types.hh
src/ss/commands/: AddCommand.cc  AddCommand.hh  RemoveCommand.cc  RemoveCommand.hh
src/ss/scripts/: AEpickableTemplate.mel
